[project]
name = "omni-mouse"
version = "0.1.0"
description = ""
authors = [
    {name = "HORIE Tetsuya",email = "horie-t@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "reactivex (>=4.0.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "omni_mouse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
