[project]
name = "omni-mouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ray[default]>=2.41.0",
]

[project.scripts]
omni-mouse = "omni_mouse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
